# controls_on_beagle_bone

./: README.md
main_controls/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
main_controls/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
main_controls/devel/include/controls/: encoder_msg.h
main_controls/devel/lib/controls/: encoders  overriding_node  test_encoders  vspid_node  wpid_node  xbox_node
main_controls/devel/lib/pkgconfig/: controls.pc
main_controls/devel/lib/python2.7/dist-packages/controls/msg/: _encoder_msg.py
main_controls/devel/share/common-lisp/ros/controls/msg/: _package.lisp  _package_encoder_msg.lisp  controls-msg.asd  encoder_msg.lisp
main_controls/devel/share/controls/cmake/: controls-msg-paths.cmake  controlsConfig.cmake
main_controls/launch/: igvccontrol.launch
main_controls/src/controls/: .goutputstream-WXC1FX  CMakeLists.txt  CMakeLists.txt~  package.xml~
main_controls/src/controls/launch/: igvccontrol.launch
main_controls/src/controls/msg/: encoder_msg.msg
main_controls/src/controls/src/: W_PID.cpp  a.out  en.cpp  encoders.cpp  encoders.cpp~  overriding_layer.cpp  teleop.cpp  test_encoder.cpp  test_encoder.cpp~  vs_pid.cpp
support_ws/devel/: .catkin  .rosinstall  setup.sh
support_ws/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
support_ws/devel/lib/diagnostic_updater/: example
support_ws/devel/lib/joy/: joy_node
support_ws/devel/lib/pkgconfig/: diagnostic_updater.pc  joy.pc
support_ws/devel/lib/python2.7/dist-packages/diagnostic_updater/: __init__.py
support_ws/devel/share/diagnostic_updater/cmake/: diagnostic_updaterConfig.cmake
support_ws/devel/share/joy/cmake/: joyConfig.cmake
